--- a/index.html
+++ b/index.html
@@ -14,80 +14,86 @@
   html, body, #map { height: 100%; margin: 0; background: #052D1F; }
 
   /* ===== Golf-ball cluster icons (large, shaded, black numbers) ===== */
-  .marker-cluster {
-    border-radius: 50%;
-  }
-  .marker-cluster div {
-    position: relative;
-    display: grid; place-items: center;
-    border-radius: 50%;
-    width: 56px; height: 56px;
-    border: 2px solid #222;
-    box-shadow: 0 6px 14px rgba(0,0,0,0.35), inset 0 2px 6px rgba(255,255,255,0.25);
+  .marker-cluster { border-radius: 50%; }
+  .marker-cluster div{
+    position:relative; display:grid; place-items:center; border-radius:50%;
+    width:56px; height:56px; border:2px solid #222;
+    box-shadow:0 6px 14px rgba(0,0,0,.35), inset 0 2px 6px rgba(255,255,255,.25);
     background:
       radial-gradient(120% 120% at 30% 30%, #ffffff 0%, #efefef 55%, #dcdcdc 75%, #cfcfcf 100%),
       repeating-radial-gradient(circle at 35% 35%, rgba(0,0,0,0.07) 0 2px, rgba(0,0,0,0) 2px 6px);
   }
-  .marker-cluster span {
-    color: #111; font: 800 16px/1.1 system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
-    text-shadow: 0 1px 0 rgba(255,255,255,0.8);
+  .marker-cluster span{
+    color:#111; font:800 16px/1.1 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+    text-shadow:0 1px 0 rgba(255,255,255,.8);
   }
-  .marker-cluster-small div { width: 48px; height: 48px; }
-  .marker-cluster-medium div { width: 56px; height: 56px; }
-  .marker-cluster-large div { width: 64px; height: 64px; }
+  .marker-cluster-small div{width:48px;height:48px}
+  .marker-cluster-medium div{width:56px;height:56px}
+  .marker-cluster-large div{width:64px;height:64px}
 
   /* ===== Popup styling (forest green) ===== */
-  .leaflet-popup-content-wrapper {
-    background: #052D1F; color: #f2f6f3;
-    border: 1px solid rgba(255,255,255,0.10);
-    box-shadow: 0 12px 28px rgba(0,0,0,0.55);
-    border-radius: 16px;
+  .leaflet-popup-content-wrapper{
+    background:#052D1F; color:#f2f6f3;
+    border:1px solid rgba(0,0,0,.35);
+    box-shadow:0 12px 28px rgba(0,0,0,.55);
+    border-radius:16px;
   }
-  .leaflet-popup-tip { background: #052D1F; }
-  .popup {
-    font-family: "Inter", -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
-    min-width: 260px; max-width: 380px;
+  .leaflet-popup-tip{background:#052D1F}
+  .popup{
+    font-family:"Inter",-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+    min-width:260px; max-width:380px;
   }
-  .popup .header { display: flex; gap: 10px; align-items: center; margin: 4px 0 10px; }
-  .popup .title { font-weight: 800; font-size: 1.08rem; line-height: 1.2; letter-spacing: .2px; }
-  .popup .line { margin: 6px 0; font-size: 0.95rem; }
-  .muted { opacity: .95; }
-  .actions { margin-top: 12px; display: flex; justify-content: flex-end; }
-  .btn {
-    padding: 8px 12px; border-radius: 10px;
-    border: 1px solid rgba(255,255,255,0.15);
-    background: #083424; color: #fff; text-decoration: none; font-weight: 700;
+  .popup .header{display:flex;gap:10px;align-items:center;margin:4px 0 10px}
+  .popup .title{font-weight:800;font-size:1.08rem;line-height:1.2;letter-spacing:.2px}
+  .popup .line{margin:6px 0;font-size:.95rem}
+  .muted{opacity:.95}
+  .actions{margin-top:12px;display:flex;justify-content:flex-end}
+  .btn{
+    padding:8px 12px;border-radius:10px;border:1px solid rgba(255,255,255,.15);
+    background:#083424;color:#fff;text-decoration:none;font-weight:700;
   }
-  .btn:hover { filter: brightness(1.08); }
+  .btn:hover{filter:brightness(1.08)}
 
   /* ===== Gold Top-100 Badge ===== */
   .badge-top100{
     --g1:#f7d776; --g2:#dcb247; --g3:#b9902d;
-    display:inline-flex; align-items:center; gap:6px;
-    padding:6px 10px; border-radius:999px;
+    display:inline-flex;align-items:center;gap:6px;
+    padding:6px 10px;border-radius:999px;
     background:linear-gradient(145deg,var(--g1),var(--g2) 55%,var(--g3));
-    color:#111; font-weight:800; letter-spacing:.2px; line-height:1;
-    box-shadow:0 0 0 1px rgba(255,255,255,.25) inset, 0 2px 6px rgba(0,0,0,.4);
+    color:#111;font-weight:800;letter-spacing:.2px;line-height:1;
+    box-shadow:0 0 0 1px rgba(255,255,255,.25) inset,0 2px 6px rgba(0,0,0,.4);
   }
-  .badge-top100 .rank{ font-size:.95rem; padding:3px 6px; border-radius:6px; background:rgba(255,255,255,.4); }
-  .badge-top100 .label{ font-size:.8rem; font-weight:900; text-transform:uppercase; }
+  .badge-top100 .rank{font-size:.95rem;padding:3px 6px;border-radius:6px;background:rgba(255,255,255,.4)}
+  .badge-top100 .label{font-size:.8rem;font-weight:900;text-transform:uppercase}
 
   /* ===== Hover tooltips ===== */
-  .ga-tooltip {
-    background:#083424; color:#f1f6f3;
-    border:1px solid rgba(255,255,255,0.15); border-radius:8px;
-    box-shadow:0 8px 18px rgba(0,0,0,.45);
-    padding:6px 8px; font-weight:700; letter-spacing:.1px;
+  .ga-tooltip{
+    background:#083424;color:#f1f6f3;border:1px solid rgba(255,255,255,.15);border-radius:8px;
+    box-shadow:0 8px 18px rgba(0,0,0,.45);padding:6px 8px;font-weight:700;letter-spacing:.1px;
   }
-  .leaflet-marker-icon { transition: transform .12s ease, filter .12s ease; }
-  .leaflet-marker-icon:hover { transform: scale(1.06); filter: drop-shadow(0 6px 12px rgba(0,0,0,.45)); }
+  .leaflet-marker-icon{transition:transform .12s ease,filter .12s ease}
+  .leaflet-marker-icon:hover{transform:scale(1.06);filter:drop-shadow(0 6px 12px rgba(0,0,0,.45))}
 
-  /* Optional: slightly dim mainland tiles (we’ll keep markers crisp) */
-  .dim-tiles img.leaflet-tile { opacity: 0.85; }
+  /* ===== UI: Top-100 Toggle ===== */
+  .toggle-wrap{
+    position:absolute; z-index:9999; top:12px; right:12px;
+    display:flex; gap:8px; align-items:center;
+    background:rgba(8,52,36,.9); color:#e9f4ef; border:1px solid rgba(0,0,0,.35);
+    border-radius:12px; padding:8px 10px; font:600 13px/1 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+    box-shadow:0 8px 18px rgba(0,0,0,.35);
+  }
+  .toggle-wrap input{accent-color:#dcb247; width:18px; height:18px; cursor:pointer}
+  .toggle-wrap label{cursor:pointer}
 </style>
 </head>
 <body>
 <div id="map"></div>
+
+<!-- Top-100 toggle -->
+<div class="toggle-wrap">
+  <input type="checkbox" id="top100Toggle" />
+  <label for="top100Toggle">Show Top-100 Only</label>
+</div>
 
 <!-- libs -->
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
@@ -98,41 +104,41 @@
   // ===== CONFIG =====
   const params = new URLSearchParams(window.location.search);
   const CSV_URL = params.get("csv") || "https://docs.google.com/spreadsheets/d/e/2PACX-1vT-nZvG7m9sUkOu0spxVTVGcM311qlgGSjnFgRDQr-l6nfs1cPFNrGBXO0ZDzMIQg/pub?gid=1171293634&single=true&output=csv";
-  const START_CENTER = [37.5, -105];  // continental center
+  const START_CENTER = [37.5, -105];
   const START_ZOOM = 4.1;
 
-  // ===== Map (CartoDB Dark Matter) =====
-  const map = L.map("map", { zoomControl: true, attributionControl: false })
+  // ===== Map (Standard OSM tiles) =====
+  const map = L.map("map", { zoomControl: true, attributionControl: true })
     .setView(START_CENTER, START_ZOOM);
 
-  const tiles = L.tileLayer(
-    "https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png",
-    { maxZoom: 18, subdomains: "abcd" }
-  ).addTo(map);
+  L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+    maxZoom: 18,
+    attribution: "&copy; OpenStreetMap contributors"
+  }).addTo(map);
 
-  // Dim mainland a touch for contrast
-  tiles.getContainer().classList.add("dim-tiles");
+  // ===== Clusters (golf-ball look) =====
+  function clusterIcon(count){
+    let sizeClass = "small";
+    if(count >= 50) sizeClass = "large";
+    else if(count >= 10) sizeClass = "medium";
+    return L.divIcon({
+      html: `<div><span>${count}</span></div>`,
+      className: `marker-cluster marker-cluster-${sizeClass}`,
+      iconSize: L.point(64, 64)
+    });
+  }
 
-  // ===== Clusters (golf ball look) =====
-  const clusters = L.markerClusterGroup({
-    showCoverageOnHover: false,
-    maxClusterRadius: 48,
-    iconCreateFunction: function(cluster) {
-      const count = cluster.getChildCount();
-      let sizeClass = "small";
-      if (count >= 50) sizeClass = "large";
-      else if (count >= 10) sizeClass = "medium";
-      return L.divIcon({
-        html: `<div><span>${count}</span></div>`,
-        className: `marker-cluster marker-cluster-${sizeClass}`,
-        iconSize: L.point(64, 64)
-      });
-    }
+  const clustersAll = L.markerClusterGroup({
+    showCoverageOnHover:false, maxClusterRadius:48,
+    iconCreateFunction: c => clusterIcon(c.getChildCount())
   });
-  map.addLayer(clusters);
+  const clustersTop = L.markerClusterGroup({
+    showCoverageOnHover:false, maxClusterRadius:48,
+    iconCreateFunction: c => clusterIcon(c.getChildCount())
+  });
+  map.addLayer(clustersAll); // default view
 
   // ===== Course Pin (green teardrop + red flag) =====
-  // Robust data-URI (properly encoded SVG) so it renders in all browsers
   const pinSvg =
     `<svg xmlns='http://www.w3.org/2000/svg' width='42' height='46' viewBox='0 0 42 46'>
       <path d='M21 1c-9.4 0-17 7.6-17 17 0 11 17 27 17 27s17-16 17-27c0-9.4-7.6-17-17-17z' fill='#1f7a3b' stroke='#0e4820' stroke-width='2'/>
@@ -142,37 +148,32 @@
     </svg>`;
   const courseIcon = L.icon({
     iconUrl: "data:image/svg+xml;charset=UTF-8," + encodeURIComponent(pinSvg),
-    iconSize: [42, 46],
-    iconAnchor: [21, 42],
-    popupAnchor: [0, -40],
-    tooltipAnchor: [0, -36]
+    iconSize: [42, 46], iconAnchor: [21, 42],
+    popupAnchor: [0, -40], tooltipAnchor: [0, -36]
   });
 
   // ===== Helpers =====
-  const esc = (s) => String(s ?? "").replace(/&/g,"&amp;").replace(/</g,"&lt;").replace(/>/g,"&gt;");
-  const toNum = (v) => { const n = parseFloat(v); return Number.isFinite(n) ? n : NaN; };
-  const isTop100 = (v) => { const n = Number(String(v ?? "").trim()); return Number.isFinite(n) && n >= 1 && n <= 100; };
+  const esc = s => String(s ?? "").replace(/&/g,"&amp;").replace(/</g,"&lt;").replace(/>/g,"&gt;");
+  const toNum = v => { const n = parseFloat(v); return Number.isFinite(n) ? n : NaN; };
+  const isTop100 = v => { const n = Number(String(v ?? "").trim()); return Number.isFinite(n) && n >= 1 && n <= 100; };
 
-  // Hawaii tuck: if point is in Hawaii's typical lon/lat box, shift it near SoCal
-  function hawaiiTuck(lat, lon) {
-    // Hawai'i approx bounds: lat ~ [18,23], lon ~ [-161,-154]
-    if (lat >= 18 && lat <= 23 && lon <= -154 && lon >= -162) {
-      // Shift Hawaii ~ +15.5° lat, +37° lon (near SoCal)
+  // Hawaii tuck: shift markers from HI bounds near SoCal for national view
+  function hawaiiTuck(lat, lon){
+    if(lat >= 18 && lat <= 23 && lon <= -154 && lon >= -162){
       return [lat + 15.5, lon + 37];
     }
     return [lat, lon];
   }
 
-  function badge(rank) {
+  function badge(rank){
     return `
       <div class="badge-top100" title="Golf Digest Top 100">
         <span class="label">Top&nbsp;100</span>
         <span class="rank">#${rank}</span>
-      </div>
-    `;
+      </div>`;
   }
 
-  function popupHtml(r) {
+  function popupHtml(r){
     const name = esc(r["course_name"]);
     const resortRaw = String(r["course_resort"] ?? "").trim();
     const fees = esc(r["cost_per_course(green_fee_range)"]);
@@ -196,63 +197,68 @@
 
     return `
       <div class="popup">
-        <div class="header">
-          ${isTop100(rank) ? badge(rank) : ""}
-          <div class="title"></div>
-        </div>
+        <div class="header">${isTop100(rank) ? badge(rank) : ""}<div class="title"></div></div>
         ${lines.join("")}
-        <div class="actions">
-          <a class="btn" href="${googleLink}" target="_blank" rel="noopener">View Course ↗</a>
-        </div>
-      </div>
-    `;
+        <div class="actions"><a class="btn" href="${googleLink}" target="_blank" rel="noopener">View Course ↗</a></div>
+      </div>`;
   }
 
-  function makeMarker(r) {
+  function makeMarker(r){
     let lat = toNum(r.latitude ?? r.Latitude ?? r.lat);
     let lon = toNum(r.longitude ?? r.Longitude ?? r.lon ?? r.lng);
-    if (!Number.isFinite(lat) || !Number.isFinite(lon)) return null;
+    if(!Number.isFinite(lat) || !Number.isFinite(lon)) return null;
 
-    // Tuck Hawaii into the CONUS view
-    const adj = hawaiiTuck(lat, lon);
-    lat = adj[0]; lon = adj[1];
+    [lat, lon] = hawaiiTuck(lat, lon);
 
     const marker = L.marker([lat, lon], { icon: courseIcon, title: r["course_name"] || "" });
-    marker.bindTooltip(r["course_name"] || "", {
-      direction: "top",
-      offset: [0, -12],
-      opacity: 0.92,
-      className: "ga-tooltip"
-    });
+    marker.bindTooltip(r["course_name"] || "", { direction:"top", offset:[0,-12], opacity:.92, className:"ga-tooltip" });
     marker.bindPopup(popupHtml(r), { maxWidth: 380, minWidth: 260, closeButton: true });
     marker.on("mouseover", () => marker.setZIndexOffset(1000));
     marker.on("mouseout",  () => marker.setZIndexOffset(0));
     return marker;
   }
 
+  // Render both layers so we can toggle quickly
+  let allMarkers = [], topMarkers = [];
+  function renderRows(rows){
+    rows.forEach(r=>{
+      const m = makeMarker(r);
+      if(!m) return;
+      allMarkers.push(m);
+      clustersAll.addLayer(m);
+      if(isTop100(r["top_100_ranking"])) {
+        topMarkers.push(m);
+        clustersTop.addLayer(m);
+      }
+    });
+    if(allMarkers.length){
+      const group = L.featureGroup(allMarkers);
+      map.fitBounds(group.getBounds().pad(0.08), { animate:true });
+    } else {
+      map.setView(START_CENTER, START_ZOOM);
+      console.warn("No markers plotted. Check lat/longitude columns and CSV URL.");
+    }
+  }
+
   // ===== Load CSV & render =====
   Papa.parse(CSV_URL, {
-    download: true,
-    header: true,
-    skipEmptyLines: true,
-    complete: (res) => {
-      const rows = res.data || [];
-      const markers = [];
-      rows.forEach((r) => {
-        const m = makeMarker(r);
-        if (m) { clusters.addLayer(m); markers.push(m); }
-      });
-      if (markers.length) {
-        const group = L.featureGroup(markers);
-        map.fitBounds(group.getBounds().pad(0.08), { animate: true });
-      } else {
-        map.setView(START_CENTER, START_ZOOM);
-        console.warn("No markers plotted. Check lat/longitude columns and CSV URL.");
-      }
-    },
-    error: (err) => {
+    download:true, header:true, skipEmptyLines:true,
+    complete: res => renderRows(res.data || []),
+    error: err => {
       console.error("CSV load error:", err);
       alert("Error loading data CSV. Check ?csv= link and that it's published as CSV.");
+    }
+  });
+
+  // ===== Top-100 Toggle behavior =====
+  const toggle = document.getElementById("top100Toggle");
+  toggle.addEventListener("change", () => {
+    if (toggle.checked) {
+      map.removeLayer(clustersAll);
+      map.addLayer(clustersTop);
+    } else {
+      map.removeLayer(clustersTop);
+      map.addLayer(clustersAll);
     }
   });
 </script>
