--- a/index.html
+++ b/index.html
@@ -5,32 +5,75 @@
 <title>Golf Atlas Map</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+<!-- Leaflet + Cluster -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
 <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
 
 <style>
-  html, body, #map { height: 100%; margin: 0; background: #052D1F; }
+  html, body, #map { height: 100%; margin: 0; background: #052D1F; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; }
 
-  /* Cluster (large golf-ball look) */
+  /* ===== UI bar ===== */
+  .control-bar{
+    position:absolute; z-index:9999; top:12px; left:12px; right:12px;
+    display:flex; gap:8px; flex-wrap:wrap; align-items:center;
+  }
+  .control{
+    display:flex; gap:8px; align-items:center;
+    background:rgba(8,52,36,.92); color:#e9f4ef; border:1px solid rgba(0,0,0,.35);
+    border-radius:12px; padding:8px 10px; font:600 13px/1 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+    box-shadow:0 8px 18px rgba(0,0,0,.35);
+  }
+  .control input[type="checkbox"]{accent-color:#dcb247; width:18px; height:18px; cursor:pointer}
+  .control label{cursor:pointer}
+
+  /* Search control */
+  .search{
+    flex:1 1 260px; display:flex; align-items:center; gap:8px;
+    background:rgba(8,52,36,.92); color:#e9f4ef; border:1px solid rgba(0,0,0,.35);
+    border-radius:12px; padding:6px 10px; box-shadow:0 8px 18px rgba(0,0,0,.35);
+  }
+  .search input{
+    flex:1; min-width:160px; border:none; outline:none; background:transparent; color:#e9f4ef;
+    font:600 14px/1.2 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+  }
+  .search input::placeholder{color:#b6d1c7}
+
+  /* ===== Golf-ball cluster icons (more realistic) ===== */
   .marker-cluster { border-radius: 50%; }
   .marker-cluster div{
     position:relative; display:grid; place-items:center; border-radius:50%;
     width:56px; height:56px; border:2px solid #222;
-    box-shadow:0 6px 14px rgba(0,0,0,.35), inset 0 2px 6px rgba(255,255,255,.25);
+    /* “photo-like” dimple pattern via layered SVG + gradients */
     background:
-      radial-gradient(120% 120% at 30% 30%, #ffffff 0%, #efefef 55%, #dcdcdc 75%, #cfcfcf 100%),
-      repeating-radial-gradient(circle at 35% 35%, rgba(0,0,0,0.07) 0 2px, rgba(0,0,0,0) 2px 6px);
+      url("data:image/svg+xml;utf8,<?xml version='1.0' encoding='UTF-8'?><svg xmlns='http://www.w3.org/2000/svg' width='64' height='64' viewBox='0 0 64 64'><defs><radialGradient id='g' cx='30%' cy='30%'><stop offset='0%' stop-color='%23ffffff'/><stop offset='60%' stop-color='%23efefef'/><stop offset='85%' stop-color='%23dcdcdc'/><stop offset='100%' stop-color='%23cfcfcf'/></radialGradient></defs><rect width='64' height='64' fill='url(%23g)'/><g fill='rgba(0,0,0,0.085)'>") no-repeat center/cover,
+      radial-gradient(120% 120% at 30% 30%, rgba(0,0,0,0) 0%, rgba(0,0,0,0) 55%, rgba(0,0,0,0.05) 100%);
+    box-shadow: 0 6px 14px rgba(0,0,0,.35), inset 0 2px 6px rgba(255,255,255,.25);
+  }
+  /* dimple dots (repeating pattern overlaid) */
+  .marker-cluster div::after{
+    content:"";
+    position:absolute; inset:0; border-radius:50%;
+    background:
+      radial-gradient(circle at 6px 6px, rgba(0,0,0,0.10) 0 2px, transparent 2px 10px),
+      radial-gradient(circle at 22px 18px, rgba(0,0,0,0.10) 0 2px, transparent 2px 10px),
+      radial-gradient(circle at 38px 10px, rgba(0,0,0,0.10) 0 2px, transparent 2px 10px),
+      radial-gradient(circle at 12px 30px, rgba(0,0,0,0.10) 0 2px, transparent 2px 10px),
+      radial-gradient(circle at 30px 30px, rgba(0,0,0,0.10) 0 2px, transparent 2px 10px),
+      radial-gradient(circle at 46px 26px, rgba(0,0,0,0.10) 0 2px, transparent 2px 10px),
+      radial-gradient(circle at 18px 46px, rgba(0,0,0,0.10) 0 2px, transparent 2px 10px),
+      radial-gradient(circle at 36px 46px, rgba(0,0,0,0.10) 0 2px, transparent 2px 10px);
+    opacity:.8;
   }
   .marker-cluster span{
     color:#111; font:800 16px/1.1 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
-    text-shadow:0 1px 0 rgba(255,255,255,.8);
+    text-shadow:0 1px 0 rgba(255,255,255,.85);
   }
   .marker-cluster-small div{width:48px;height:48px}
   .marker-cluster-medium div{width:56px;height:56px}
   .marker-cluster-large div{width:64px;height:64px}
 
-  /* Popup (forest green) */
+  /* ===== Popup styling (forest green) ===== */
   .leaflet-popup-content-wrapper{
     background:#052D1F; color:#f2f6f3;
     border:1px solid rgba(0,0,0,.35);
@@ -38,22 +81,16 @@
     border-radius:16px;
   }
   .leaflet-popup-tip{background:#052D1F}
-  .popup{
-    font-family:"Inter",-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
-    min-width:260px; max-width:380px;
-  }
+  .popup{min-width:260px; max-width:380px;}
   .popup .header{display:flex;gap:10px;align-items:center;margin:4px 0 10px}
   .popup .title{font-weight:800;font-size:1.08rem;line-height:1.2;letter-spacing:.2px}
   .popup .line{margin:6px 0;font-size:.95rem}
   .muted{opacity:.95}
   .actions{margin-top:12px;display:flex;justify-content:flex-end}
-  .btn{
-    padding:8px 12px;border-radius:10px;border:1px solid rgba(255,255,255,.15);
-    background:#083424;color:#fff;text-decoration:none;font-weight:700;
-  }
+  .btn{padding:8px 12px;border-radius:10px;border:1px solid rgba(255,255,255,.15);background:#083424;color:#fff;text-decoration:none;font-weight:700;}
   .btn:hover{filter:brightness(1.08)}
 
-  /* Gold Top-100 Badge */
+  /* ===== Gold Top-100 Badge ===== */
   .badge-top100{
     --g1:#f7d776; --g2:#dcb247; --g3:#b9902d;
     display:inline-flex;align-items:center;gap:6px;
@@ -65,97 +102,95 @@
   .badge-top100 .rank{font-size:.95rem;padding:3px 6px;border-radius:6px;background:rgba(255,255,255,.4)}
   .badge-top100 .label{font-size:.8rem;font-weight:900;text-transform:uppercase}
 
-  /* Tooltips */
+  /* ===== Hover tooltips & pin effects ===== */
   .ga-tooltip{
     background:#083424;color:#f1f6f3;border:1px solid rgba(255,255,255,.15);border-radius:8px;
     box-shadow:0 8px 18px rgba(0,0,0,.45);padding:6px 8px;font-weight:700;letter-spacing:.1px;
   }
-  .leaflet-marker-icon{transition:transform .12s ease,filter .12s ease}
-  .leaflet-marker-icon:hover{transform:scale(1.06);filter:drop-shadow(0 6px 12px rgba(0,0,0,.45))}
-
-  /* UI: Toggles */
-  .control-bar{
-    position:absolute; z-index:9999; top:12px; right:12px;
-    display:flex; flex-wrap:wrap; gap:8px;
+  .leaflet-marker-icon{transition:transform .12s ease, filter .12s ease, box-shadow .12s ease}
+  .leaflet-marker-icon:hover{
+    transform: scale(1.06);
+    filter: drop-shadow(0 8px 14px rgba(0,0,0,.45));
+    box-shadow: 0 0 0 2px rgba(255,255,255,.9); /* crisp halo */
   }
-  .control{
-    display:flex; gap:8px; align-items:center;
-    background:rgba(8,52,36,.92); color:#e9f4ef; border:1px solid rgba(0,0,0,.35);
-    border-radius:12px; padding:8px 10px; font:600 13px/1 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
-    box-shadow:0 8px 18px rgba(0,0,0,.35);
-  }
-  .control input{accent-color:#dcb247; width:18px; height:18px; cursor:pointer}
-  .control label{cursor:pointer}
 </style>
 </head>
 <body>
 <div id="map"></div>
 
-<!-- Toggles -->
+<!-- Controls -->
 <div class="control-bar">
+  <div class="search">
+    <span>🔎</span>
+    <input id="searchBox" list="courseList" placeholder="Search course, city, or state…" />
+    <datalist id="courseList"></datalist>
+  </div>
   <div class="control">
     <input type="checkbox" id="top100Toggle" />
     <label for="top100Toggle">Show Top-100 Only</label>
   </div>
   <div class="control">
-    <input type="checkbox" id="scrollToggle" />
-    <label for="scrollToggle">Enable Scroll Zoom</label>
+    <input type="checkbox" id="heatToggle" />
+    <label for="heatToggle">Pin Density Heat</label>
   </div>
 </div>
 
+<!-- libs -->
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
 <script src="https://unpkg.com/papaparse@5.4.1/papaparse.min.js"></script>
+<script src="https://unpkg.com/leaflet.heat/dist/leaflet-heat.js"></script>
 
 <script>
   // ===== CONFIG =====
   const params = new URLSearchParams(window.location.search);
   const CSV_URL = params.get("csv") || "https://docs.google.com/spreadsheets/d/e/2PACX-1vT-nZvG7m9sUkOu0spxVTVGcM311qlgGSjnFgRDQr-l6nfs1cPFNrGBXO0ZDzMIQg/pub?gid=1171293634&single=true&output=csv";
 
-  // Map feel: softer, no fling, limited zoom, scroll disabled by default
   const map = L.map("map", {
     center: [37.5, -105],
     zoom: 4.1,
     minZoom: 3.5,
-    maxZoom: 14,               // cap detail so zoomed-in isn’t “too busy”
+    maxZoom: 14,
     zoomSnap: 0.5,
     zoomDelta: 0.5,
-    inertia: false,            // stop momentum flings
-    scrollWheelZoom: false,    // user can enable via toggle
+    inertia: false,
+    scrollWheelZoom: false,
     doubleClickZoom: false,
-    maxBounds: [[7, -170], [72, -50]], // constrain to US-ish box (incl. HI tuck area)
+    maxBounds: [[7, -170], [72, -50]],
     maxBoundsViscosity: 0.8
   });
 
-  // Basemap: Carto Positron (clean, less detail/noisy labels)
+  // Base: Carto Positron (clean) + labels-only overlay at mid zooms
   const basePositron = L.tileLayer(
     "https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png",
-    { maxZoom: 18, subdomains: "abcd", maxNativeZoom: 14 } // don’t fetch ultra-detailed tiles
+    { maxZoom: 18, subdomains: "abcd", maxNativeZoom: 14 }
   ).addTo(map);
+  const labelsOnly = L.tileLayer(
+    "https://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png",
+    { subdomains: "abcd", opacity: 0 }
+  ).addTo(map);
+  map.on("zoomend", () => labelsOnly.setOpacity(map.getZoom() >= 8 ? 0.85 : 0));
 
-  // ===== Clusters (golf ball look) =====
-  function clusterIcon(count){
-    let sizeClass = "small";
-    if(count >= 50) sizeClass = "large";
-    else if(count >= 10) sizeClass = "medium";
-    return L.divIcon({
-      html: `<div><span>${count}</span></div>`,
-      className: `marker-cluster marker-cluster-${sizeClass}`,
-      iconSize: L.point(64, 64)
-    });
-  }
-
-  const clustersAll = L.markerClusterGroup({
+  // Cluster group
+  let clusterLayer = L.markerClusterGroup({
     showCoverageOnHover:false, maxClusterRadius:48,
-    iconCreateFunction: c => clusterIcon(c.getChildCount())
-  });
-  const clustersTop = L.markerClusterGroup({
-    showCoverageOnHover:false, maxClusterRadius:48,
-    iconCreateFunction: c => clusterIcon(c.getChildCount())
-  });
-  map.addLayer(clustersAll);
+    iconCreateFunction: c => {
+      const count = c.getChildCount();
+      let sizeClass = "small";
+      if (count >= 50) sizeClass = "large";
+      else if (count >= 10) sizeClass = "medium";
+      return L.divIcon({
+        html: `<div><span>${count}</span></div>`,
+        className: `marker-cluster marker-cluster-${sizeClass}`,
+        iconSize: L.point(64,64)
+      });
+    }
+  }).addTo(map);
 
-  // Course Pin (green teardrop + red flag) — robust encoded SVG
+  // Heat layer (initially off)
+  let heatLayer = L.heatLayer([], { radius: 20, blur: 16, maxZoom: 10, minOpacity: 0.35 });
+
+  // Course pin icon (SVG encoded)
   const pinSvg =
     `<svg xmlns='http://www.w3.org/2000/svg' width='42' height='46' viewBox='0 0 42 46'>
       <path d='M21 1c-9.4 0-17 7.6-17 17 0 11 17 27 17 27s17-16 17-27c0-9.4-7.6-17-17-17z' fill='#1f7a3b' stroke='#0e4820' stroke-width='2'/>
@@ -172,6 +207,7 @@
   const esc = s => String(s ?? "").replace(/&/g,"&amp;").replace(/</g,"&lt;").replace(/>/g,"&gt;");
   const toNum = v => { const n = parseFloat(v); return Number.isFinite(n) ? n : NaN; };
   const isTop100 = v => { const n = Number(String(v ?? "").trim()); return Number.isFinite(n) && n >= 1 && n <= 100; };
+  const normalize = s => String(s ?? "").toLowerCase();
 
   // Hawaii tuck (shift HI into CONUS view)
   function hawaiiTuck(lat, lon){
@@ -219,6 +255,13 @@
       </div>`;
   }
 
+  // Global state
+  let rows = [];                 // raw rows from CSV
+  let markers = [];              // [{ marker, row }]
+  let filteredMarkers = [];      // active filtered set
+  let heatData = [];             // [ [lat, lon, weight], ... ]
+
+  // Build marker for a row
   function makeMarker(r){
     let lat = toNum(r.latitude ?? r.Latitude ?? r.lat);
     let lon = toNum(r.longitude ?? r.Longitude ?? r.lon ?? r.lng);
@@ -227,63 +270,148 @@
     [lat, lon] = hawaiiTuck(lat, lon);
 
     const marker = L.marker([lat, lon], { icon: courseIcon, title: r["course_name"] || "" });
+
+    // Tooltip
     marker.bindTooltip(r["course_name"] || "", { direction:"top", offset:[0,-12], opacity:.92, className:"ga-tooltip" });
+
+    // Popup
     marker.bindPopup(popupHtml(r), { maxWidth: 380, minWidth: 260, closeButton: true });
+
+    // Top-100 gold rim
+    const rank = r["top_100_ranking"];
+    marker.on("add", () => {
+      if (isTop100(rank) && marker._icon) {
+        marker._icon.style.filter = "drop-shadow(0 0 1px #b9902d) drop-shadow(0 0 6px rgba(185,144,45,.55))";
+      }
+    });
+
+    // Hover z-index
     marker.on("mouseover", () => marker.setZIndexOffset(1000));
     marker.on("mouseout",  () => marker.setZIndexOffset(0));
+
     return marker;
   }
 
-  // Render rows into two layers (all vs top-100)
-  let allMarkers = [], topMarkers = [];
-  function renderRows(rows){
-    rows.forEach(r=>{
-      const m = makeMarker(r);
-      if(!m) return;
-      allMarkers.push(m);
-      clustersAll.addLayer(m);
-      if(isTop100(r["top_100_ranking"])) {
-        topMarkers.push(m);
-        clustersTop.addLayer(m);
+  // Populate search suggestions (datalist)
+  function updateDatalist(samples){
+    const dl = document.getElementById("courseList");
+    dl.innerHTML = "";
+    samples.slice(0, 50).forEach(s => {
+      const opt = document.createElement("option");
+      opt.value = s;
+      dl.appendChild(opt);
+    });
+  }
+
+  // Apply filters (Top-100 toggle + search)
+  function applyFilters(){
+    const topOnly = document.getElementById("top100Toggle").checked;
+    const q = normalize(document.getElementById("searchBox").value);
+
+    // Clear cluster & heat
+    clusterLayer.clearLayers();
+    filteredMarkers = [];
+    heatData = [];
+
+    markers.forEach(({marker, row}) => {
+      const matchesTop = !topOnly || isTop100(row["top_100_ranking"]);
+      const hay = `${normalize(row["course_name"])} ${normalize(row["City"] || row["city"])} ${normalize(row["state"])}`;
+      const matchesSearch = !q || hay.includes(q);
+      if (matchesTop && matchesSearch) {
+        clusterLayer.addLayer(marker);
+        filteredMarkers.push({marker, row});
+        const latlng = marker.getLatLng();
+        heatData.push([latlng.lat, latlng.lng, 0.6]);
       }
     });
-    if(allMarkers.length){
-      const group = L.featureGroup(allMarkers);
+
+    if (heatLayer && map.hasLayer(heatLayer)) {
+      heatLayer.setLatLngs(heatData);
+    }
+
+    if (filteredMarkers.length) {
+      const group = L.featureGroup(filteredMarkers.map(m => m.marker));
       map.fitBounds(group.getBounds().pad(0.08), { animate:true });
-    } else {
-      console.warn("No markers plotted. Check lat/longitude columns and CSV URL.");
     }
   }
 
-  // Load CSV
+  // Type-ahead: enter to zoom/open
+  function handleSearchEnter(){
+    const q = normalize(document.getElementById("searchBox").value);
+    if (!q) return;
+    const first = filteredMarkers.find(({row}) => {
+      const hay = `${normalize(row["course_name"])} ${normalize(row["City"] || row["city"])} ${normalize(row["state"])}`;
+      return hay.includes(q);
+    }) || filteredMarkers[0];
+    if (first) {
+      const ll = first.marker.getLatLng();
+      map.setView(ll, Math.min(14, Math.max(map.getZoom(), 9)), { animate:true });
+      setTimeout(() => first.marker.openPopup(), 250);
+    }
+  }
+
+  // Loading CSV
   Papa.parse(CSV_URL, {
     download:true, header:true, skipEmptyLines:true,
-    complete: res => renderRows(res.data || []),
+    complete: res => {
+      rows = res.data || [];
+      // Build markers + initial heat data and datalist
+      const names = new Set();
+      rows.forEach(r => {
+        const m = makeMarker(r);
+        if (!m) return;
+        markers.push({marker:m, row:r});
+        clusterLayer.addLayer(m);
+        names.add(r["course_name"]);
+      });
+      // Seed heat
+      heatData = markers.map(({marker}) => {
+        const ll = marker.getLatLng(); return [ll.lat, ll.lng, 0.6];
+      });
+      // Suggestions: course names (unique)
+      updateDatalist(Array.from(names).filter(Boolean).sort());
+
+      // Fit bounds
+      if (markers.length) {
+        const group = L.featureGroup(markers.map(m => m.marker));
+        map.fitBounds(group.getBounds().pad(0.08), { animate:true });
+      }
+    },
     error: err => {
       console.error("CSV load error:", err);
       alert("Error loading data CSV. Check ?csv= link and that it's published as CSV.");
     }
   });
 
-  // UI: Top-100 Toggle
-  const top100Toggle = document.getElementById("top100Toggle");
-  top100Toggle.addEventListener("change", () => {
-    if (top100Toggle.checked) {
-      map.removeLayer(clustersAll);
-      map.addLayer(clustersTop);
+  // UI: toggles
+  document.getElementById("top100Toggle").addEventListener("change", applyFilters);
+
+  // Heat toggle
+  document.getElementById("heatToggle").addEventListener("change", (e) => {
+    if (e.target.checked) {
+      if (!map.hasLayer(heatLayer)) {
+        heatLayer.setLatLngs(heatData);
+        heatLayer.addTo(map);
+      }
     } else {
-      map.removeLayer(clustersTop);
-      map.addLayer(clustersAll);
+      if (map.hasLayer(heatLayer)) map.removeLayer(heatLayer);
     }
   });
 
-  // UI: Scroll Zoom Toggle
-  const scrollToggle = document.getElementById("scrollToggle");
-  scrollToggle.checked = false; // default off
-  scrollToggle.addEventListener("change", () => {
-    if (scrollToggle.checked) map.scrollWheelZoom.enable();
-    else map.scrollWheelZoom.disable();
+  // Search events
+  const searchBox = document.getElementById("searchBox");
+  searchBox.addEventListener("input", () => {
+    // live filter while typing
+    applyFilters();
+  });
+  searchBox.addEventListener("keydown", (e) => {
+    if (e.key === "Enter") {
+      e.preventDefault();
+      applyFilters();
+      handleSearchEnter();
+    }
   });
 </script>
 </body>
 </html>
+
