--- a/index.html
+++ b/index.html
@@ -90,11 +90,22 @@
 
   /* ===== Top section thumbnail / logo ===== */
   .thumb{
+    position:relative;
     width:100%; aspect-ratio:16/9; border-radius:12px; overflow:hidden;
     border:1px solid rgba(255,255,255,.15); margin:6px 0 10px; background:#0c1f18;
   }
-  .thumb img{
+  .thumb img.main{
     width:100%; height:100%; object-fit:cover; display:block;
+  }
+  /* Circular logo badge overlay (bottom-right) */
+  .logo-badge{
+    position:absolute; right:8px; bottom:8px; width:56px; height:56px;
+    border-radius:50%; overflow:hidden; background:#fff;
+    border:1px solid rgba(255,255,255,.65);
+    box-shadow:0 6px 14px rgba(0,0,0,.35), inset 0 1px 2px rgba(0,0,0,.08);
+  }
+  .logo-badge img{
+    width:100%; height:100%; object-fit:contain; background:#fff; display:block; padding:6px;
   }
 
   /* ===== Gold Top-100 Badge ===== */
@@ -224,15 +235,36 @@
       </div>`;
   }
 
-  function thumbHtml(imgUrl){
-    const u = safeUrl(imgUrl);
-    if (!u) return "";
-    // onerror = remove the wrapper so it collapses cleanly
+  // Build the top media block
+  function mediaBlock(r){
+    // Support new columns first; fallback to any older ones
+    const thumb = safeUrl(r["thumbnail_url"] || r["thumbail_url"] || r["image_url"]);
+    const logo  = safeUrl(r["logo_url"]);
+
+    if (!thumb && !logo) return ""; // nothing to render
+
+    // If only one exists, render it full-size as the main image
+    if (thumb && !logo) {
+      return `
+        <div class="thumb">
+          <img class="main" src="${thumb}" alt="" loading="lazy" onerror="this.closest('.thumb')?.remove()" />
+        </div>`;
+    }
+    if (!thumb && logo) {
+      return `
+        <div class="thumb">
+          <img class="main" src="${logo}" alt="" loading="lazy" onerror="this.closest('.thumb')?.remove()" />
+        </div>`;
+    }
+
+    // If both exist, render thumbnail + logo badge overlay
     return `
       <div class="thumb">
-        <img src="${u}" alt="" loading="lazy" onerror="this.closest('.thumb')?.remove()"/>
-      </div>
-    `;
+        <img class="main" src="${thumb}" alt="" loading="lazy" onerror="this.closest('.thumb')?.remove()" />
+        <div class="logo-badge">
+          <img src="${logo}" alt="" loading="lazy" onerror="this.closest('.logo-badge')?.remove()" />
+        </div>
+      </div>`;
   }
 
   function popupHtml(r){
@@ -244,9 +276,6 @@
     const rank = r["top_100_ranking"];
     const city = esc(r["City"] || r["city"] || "");
     const state = esc(r["state"] || "");
-
-    // image_url preferred, else logo_url
-    const imgUrl = safeUrl(r["image_url"]) || safeUrl(r["logo_url"]);
 
     const lines = [];
     lines.push(`<div class="line"><strong>🏌️‍♂️ ${name}</strong></div>`);
@@ -262,16 +291,12 @@
 
     return `
       <div class="popup">
-        ${thumbHtml(imgUrl)}
+        ${mediaBlock(r)}
         <div class="header">${isTop100(rank) ? badge(rank) : ""}<div class="title"></div></div>
         ${lines.join("")}
         <div class="actions"><a class="btn" href="${googleLink}" target="_blank" rel="noopener">View Course ↗</a></div>
       </div>`;
   }
-
-  // State
-  let markers = [];      // [{ marker, row }]
-  let filteredMarkers = [];
 
   // Build marker
   function makeMarker(r){
@@ -299,7 +324,11 @@
     return marker;
   }
 
-  // Apply filters
+  // Filtering / search
+  const normalize = s => String(s ?? "").toLowerCase();
+  const markers = [];
+  let filteredMarkers = [];
+
   function applyFilters(){
     const topOnly = document.getElementById("top100Toggle").checked;
     const q = normalize(document.getElementById("searchBox").value);
@@ -323,7 +352,6 @@
     }
   }
 
-  // Type-ahead: enter to zoom/open
   function handleSearchEnter(){
     const q = normalize(document.getElementById("searchBox").value);
     if (!q) return;
@@ -371,7 +399,6 @@
 
   // UI handlers
   document.getElementById("top100Toggle").addEventListener("change", applyFilters);
-
   const searchBox = document.getElementById("searchBox");
   searchBox.addEventListener("input", applyFilters);
   searchBox.addEventListener("keydown", (e) => {
